# cqrs_rust

./: .gitignore  Cargo.toml
cqrs_generator/: Cargo.toml  build.rs
cqrs_generator/src/: code_builder.rs  contracts.rs  hierarchy.rs  lib.rs  name.rs  output.rs  stmt_builder.rs
cqrs_server/: Cargo.toml
cqrs_server/src/: contracts.rs  handlers.rs  input.rs  lib.rs
example/: Cargo.toml  build.rs
example/src/: lib.rs  main.rs
