[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
cqrs_server = { path = "../cqrs_server" }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.104"
serde_repr = "0.1.15"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[build-dependencies]
cqrs_generator = { path = "../cqrs_generator" }
